@@ -225,6 +225,20 @@ name|ProcedureParameter
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|QueryDescriptor
+import|;
+end_import
+
 begin_class
 specifier|public
 class|class
@@ -497,6 +511,23 @@ operator|)
 name|parameter
 operator|.
 name|getParent
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|ConfigurationNode
+name|visitQuery
+parameter_list|(
+name|QueryDescriptor
+name|query
+parameter_list|)
+block|{
+return|return
+name|query
+operator|.
+name|getDataMap
 argument_list|()
 return|;
 block|}
