@@ -270,17 +270,12 @@ name|procedureQueryDescriptor
 argument_list|()
 return|;
 default|default:
-name|QueryDescriptor
-name|descriptor
-init|=
+return|return
 operator|new
 name|QueryDescriptor
 argument_list|(
 name|type
 argument_list|)
-decl_stmt|;
-return|return
-name|descriptor
 return|;
 block|}
 block|}
