@@ -168,10 +168,14 @@ name|CacheableQuery
 implements|implements
 name|XMLSerializable
 block|{
+annotation|@
+name|Deprecated
 specifier|protected
 name|String
 name|name
 decl_stmt|;
+annotation|@
+name|Deprecated
 specifier|protected
 name|DataMap
 name|dataMap
@@ -230,6 +234,8 @@ parameter_list|()
 block|{
 block|}
 comment|/**      * @since 3.1      */
+annotation|@
+name|Deprecated
 specifier|public
 name|DataMap
 name|getDataMap
@@ -240,6 +246,8 @@ name|dataMap
 return|;
 block|}
 comment|/**      * @since 3.1      */
+annotation|@
+name|Deprecated
 specifier|public
 name|void
 name|setDataMap
@@ -488,6 +496,8 @@ return|return
 name|name
 return|;
 block|}
+annotation|@
+name|Deprecated
 specifier|public
 name|void
 name|setName
