@@ -123,11 +123,15 @@ name|visitor
 parameter_list|)
 function_decl|;
 comment|/**      * Returns a symbolic name of the query. The name is normally used as a key to find      * queries stored in the DataMap.      *       * @since 1.1      * @deprecated {@link QueryDescriptor#getName()} should be used instead      */
+annotation|@
+name|Deprecated
 name|String
 name|getName
 parameter_list|()
 function_decl|;
-comment|/**      * @since 3.1      */
+comment|/**      * @since 3.1      * @deprecated since 4.0, {@link QueryDescriptor#getDataMap()} should be used instead      */
+annotation|@
+name|Deprecated
 name|DataMap
 name|getDataMap
 parameter_list|()
