@@ -261,6 +261,8 @@ name|visitor
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Deprecated
 specifier|public
 name|String
 name|getName
@@ -273,7 +275,9 @@ name|getName
 argument_list|()
 return|;
 block|}
-comment|/**      * @since 3.1      */
+comment|/**      * @since 3.1      * @deprecated since 4.0      */
+annotation|@
+name|Deprecated
 specifier|public
 name|DataMap
 name|getDataMap
