@@ -23,20 +23,6 @@ name|apache
 operator|.
 name|cayenne
 operator|.
-name|configuration
-operator|.
-name|ConfigurationNodeVisitor
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
 name|map
 operator|.
 name|DataMap
@@ -65,14 +51,6 @@ implements|implements
 name|Query
 block|{
 specifier|protected
-name|String
-name|name
-decl_stmt|;
-specifier|protected
-name|DataMap
-name|dataMap
-decl_stmt|;
-specifier|protected
 name|boolean
 name|selecting
 decl_stmt|;
@@ -99,43 +77,16 @@ name|MockQuery
 parameter_list|()
 block|{
 block|}
+annotation|@
+name|Deprecated
 specifier|public
 name|DataMap
 name|getDataMap
 parameter_list|()
 block|{
 return|return
-name|dataMap
+literal|null
 return|;
-block|}
-specifier|public
-name|void
-name|setDataMap
-parameter_list|(
-name|DataMap
-name|dataMap
-parameter_list|)
-block|{
-name|this
-operator|.
-name|dataMap
-operator|=
-name|dataMap
-expr_stmt|;
-block|}
-specifier|public
-name|MockQuery
-parameter_list|(
-name|String
-name|name
-parameter_list|)
-block|{
-name|this
-operator|.
-name|name
-operator|=
-name|name
-expr_stmt|;
 block|}
 specifier|public
 name|QueryMetadata
@@ -169,29 +120,16 @@ return|return
 name|selecting
 return|;
 block|}
+annotation|@
+name|Deprecated
 specifier|public
 name|String
 name|getName
 parameter_list|()
 block|{
 return|return
-name|name
+literal|null
 return|;
-block|}
-specifier|public
-name|void
-name|setName
-parameter_list|(
-name|String
-name|name
-parameter_list|)
-block|{
-name|this
-operator|.
-name|name
-operator|=
-name|name
-expr_stmt|;
 block|}
 specifier|public
 name|SQLAction
