@@ -249,6 +249,20 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|map
+operator|.
+name|QueryDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|modeler
 operator|.
 name|Application
@@ -594,7 +608,7 @@ name|DataMap
 operator|||
 name|object
 operator|instanceof
-name|Query
+name|QueryDescriptor
 operator|||
 name|object
 operator|instanceof
