@@ -3455,133 +3455,73 @@ name|ConfigurationNode
 name|object
 parameter_list|)
 block|{
-if|if
-condition|(
-name|object
-operator|==
-literal|null
-condition|)
-block|{
 return|return
-literal|false
-return|;
-block|}
-if|if
-condition|(
+operator|(
 name|object
 operator|instanceof
 name|DataChannelDescriptor
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-if|else if
-condition|(
+operator|)
+operator|||
+operator|(
 name|object
 operator|instanceof
 name|DataMap
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-if|else if
-condition|(
+operator|)
+operator|||
+operator|(
 name|object
 operator|instanceof
 name|DataNodeDescriptor
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-if|else if
-condition|(
+operator|)
+operator|||
+operator|(
 name|object
 operator|instanceof
 name|Entity
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-if|else if
-condition|(
+operator|)
+operator|||
+operator|(
 name|object
 operator|instanceof
 name|Attribute
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-if|else if
-condition|(
+operator|)
+operator|||
+operator|(
 name|object
 operator|instanceof
 name|Relationship
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-if|else if
-condition|(
+operator|)
+operator|||
+operator|(
 name|object
 operator|instanceof
 name|Procedure
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-if|else if
-condition|(
+operator|)
+operator|||
+operator|(
 name|object
 operator|instanceof
 name|ProcedureParameter
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-if|else if
-condition|(
+operator|)
+operator|||
+operator|(
+name|object
+operator|instanceof
+name|QueryDescriptor
+operator|)
+operator|||
+operator|(
 name|object
 operator|instanceof
 name|Embeddable
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-if|else if
-condition|(
+operator|)
+operator|||
+operator|(
 name|object
 operator|instanceof
 name|EmbeddableAttribute
-condition|)
-block|{
-return|return
-literal|true
+operator|)
 return|;
-block|}
-else|else
-block|{
-return|return
-literal|false
-return|;
-block|}
 block|}
 comment|/**      * Removes an object, depending on its type      */
 specifier|private
@@ -3813,7 +3753,7 @@ name|RemoveUndoableEdit
 argument_list|(
 operator|(
 operator|(
-name|Query
+name|QueryDescriptor
 operator|)
 name|object
 operator|)
@@ -3831,7 +3771,7 @@ name|removeQuery
 argument_list|(
 operator|(
 operator|(
-name|Query
+name|QueryDescriptor
 operator|)
 name|object
 operator|)
